[gd_scene load_steps=6 format=3 uid="uid://b5t4kdlklyncl"]

[ext_resource type="Texture2D" uid="uid://uiqhrnuaj1b4" path="res://assets/prototype/gfx/environment/plate_unpressed.png" id="1_t7ufi"]
[ext_resource type="Script" path="res://src/world/objects/plate.gd" id="1_xhgkl"]
[ext_resource type="Texture2D" uid="uid://luddxjghqfuq" path="res://assets/prototype/gfx/environment/plate_pressed.png" id="2_y06dk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_sjq0j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_t7ufi")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_y06dk")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d35cl"]
size = Vector2(96, 10)

[node name="plate" type="Area2D"]
collision_mask = 49
script = ExtResource("1_xhgkl")

[node name="sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -64)
sprite_frames = SubResource("SpriteFrames_sjq0j")
animation = &"on"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_d35cl")

[node name="timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
